<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myhomepagel"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="wrap_content"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_height="100dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/avatar"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin"
                android:textColor="#263238"
                android:textSize="15sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="#263238"
                android:textSize="15sp"
                tools:ignore="TextSizeCheck" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/ll1"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#E8FDFDFD"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_gravity="center"
                        android:layout_height="35dp"
                        android:background="@drawable/idea"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/idea"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        tools:ignore="SpUsage,TextSizeCheck" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#E8FDFDFD"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:background="@drawable/food"
                        tools:ignore="ContentDescription,ImageContrastCheck" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/food"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        tools:ignore="SpUsage,TextSizeCheck" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="#E8FDFDFD"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:background="@drawable/health"
                        android:contentDescription="@string/todos"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/me"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        tools:ignore="SpUsage,TextSizeCheck" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#E8FDFDFD"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_gravity="center"
                        android:layout_height="35dp"
                        android:background="@drawable/gym"
                        android:contentDescription="@string/todoss" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/fitn"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        tools:ignore="SpUsage,TextSizeCheck" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#E8FDFDFD"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_gravity="center"
                        android:layout_height="35dp"
                        android:background="@drawable/list"
                        android:contentDescription="@string/todas" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/list"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        tools:ignore="SpUsage,TextSizeCheck" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#E8FDFDFD"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_gravity="center"
                        android:layout_height="35dp"
                        android:background="@drawable/read"
                        android:contentDescription="@string/todass" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/read"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        tools:ignore="SpUsage,TextSizeCheck" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>